--- a/code/index.css
+++ b/code/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     text-decoration: none;
     list-style-type: none;
+    font-family: 'Montserrat', sans-serif;
 }
  /* body{
     background-image: url(/pricing-component-with-toggle-master/images/bg-bottom.svg);
@@ -146,16 +147,16 @@ span{
 .ontop_card{
     text-align: center;
     /* border-bottom: 1px solid; */
-    padding: 15px;
+    padding: 10px;
 
 }
 ul{
-    padding: 15px;
+    padding: 10px;
 }
 ul li{
     text-align: center;
     font-size: 1.3rem;
-    padding: 15px;
+    padding: 10px;
     border-top: 1px solid;
     /* border-bottom: 1px solid; */
 }
@@ -164,12 +165,12 @@ button{
     justify-content: center;
     border: none;
     width: 70%;
-    height: 35px;
+    /* height: 35px; */
     text-align: center;
-    margin: auto;
+    margin: 20px auto;
     font-size: 0.7rem;
     letter-spacing: 1px;
-    padding: 10px;
+    padding: 8px;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -179,7 +180,7 @@ button{
 @media screen and (max-width:600px) {
     .inner_cell{
         grid-template-columns: 1fr;
-        grid-gap: 2vh;
+        grid-gap: 4vh;
     }
     .blue{
         transform: none;
